# Student_stress_visualizer

./: .dockerignore  .gitignore  README.md  app.py  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
config/: config.py
dataset/: academic Stress level - maintainance 1.csv
pages/: 1_profile.py  2_dashboard.py  3_input_page.py
queries/: avg_stress_by_environment.sql  avg_stress_by_stage.sql  bad_habits_comparison.sql  coping_strategy_counts.sql  create_database.sql  distribution_stress_index.sql  get_all.sql  insert_record.sql  stress_by_bad_habits.sql  stress_by_coping_strategy.sql  stress_distribution.sql  stress_vs_competition.sql  stress_vs_home_pressure.sql  stress_vs_peer_pressure.sql  stress_vs_pressure.sql  top_stressed_students.sql  undergraduate.sql
source/: query_runner.py
