[project]
name = "student-stress-visualizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "sqlalchemy>=2.0.43",
    "types-psycopg2>=2.9.21.20250809",
]
